--- a/day3/Chaper0913_task.ipynb
+++ b/day3/Chaper0913_task.ipynb
@@ -46,18 +46,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "invalid literal for int() with base 10: ''",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[28], line 5\u001b[0m\n\u001b[1;32m      2\u001b[0m num2 \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m()\n\u001b[1;32m      3\u001b[0m num3 \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m()\n\u001b[0;32m----> 5\u001b[0m number \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mnum1\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;241m+\u001b[39m \u001b[38;5;28mint\u001b[39m (num2) \u001b[38;5;241m+\u001b[39m \u001b[38;5;28mint\u001b[39m(num3)\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28mprint\u001b[39m(number)\n",
-      "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: ''"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "210\n"
      ]
     }
    ],
@@ -92,24 +88,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {
     "id": "vjUhNFdBYo2n"
    },
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (3210944633.py, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[7], line 2\u001b[0;36m\u001b[0m\n\u001b[0;31m    movie.insert(2. \"비밀\")\u001b[0m\n\u001b[0m                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
+     "data": {
+      "text/plain": [
+       "['서울의 봄', '나폴레옹', '비밀', '괴물']"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "movie = ['서울의 봄', '나폴레올', '괴물', '베트맨'] \n",
-    "movie.insert(2. \"비밀\")\n",
-    "print(movie)"
+    "movie = ['서울의 봄', '나폴레옹', '비밀', '괴물', '베트맨']\n",
+    "del movie[-1]\n",
+    "movie"
    ]
   },
   {
@@ -227,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -235,27 +233,16 @@
      "output_type": "stream",
      "text": [
       "<built-in function max>\n",
-      "<built-in function min>\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for /: 'builtin_function_or_method' and 'int'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[27], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mmax\u001b[39m)\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mmin\u001b[39m)\n\u001b[0;32m----> 4\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28;43msum\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m/\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;28;43mlen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mnums\u001b[49m\u001b[43m)\u001b[49m)\n",
-      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for /: 'builtin_function_or_method' and 'int'"
+      "<built-in function min>\n",
+      "5.222222222222222\n"
      ]
     }
    ],
    "source": [
-    "\n",
     "nums = [1, 2, 3, 4, 5, 6, 7, 9, 10]\n",
     "print(max)\n",
     "print(min)\n",
-    "print(sum / len(nums))"
+    "print(sum(nums) / len(nums))"
    ]
   },
   {
@@ -334,23 +321,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {
     "id": "BpMb0bHPFdKF"
    },
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "cannot delete function call (3834099047.py, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[30], line 2\u001b[0;36m\u001b[0m\n\u001b[0;31m    del price(0)\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m cannot delete function call\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[100, 130, 140, 150, 160, 170]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "price = ['20180728', 100, 130, 140, 150, 160, 170]\n",
-    "del price(0)\n",
+    "del price[0]\n",
     "price"
    ]
   },
