--- a/day4/Chaoter0116_task.ipynb
+++ b/day4/Chaoter0116_task.ipynb
@@ -66,10 +66,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'팥붕어빵': 10, '슈크림붕어빵': 8, '초코붕어빵': 5}\n"
+     ]
+    }
+   ],
+   "source": [
+    "붕어빵 = {\"팥붕어빵\" : 10, \"슈크림붕어빵\": 8, \"초코붕어빵\": 5}\n",
+    "print(붕어빵)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -87,10 +98,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "주문 내역: {'10': 5}\n"
+     ]
+    }
+   ],
+   "source": [
+    "order = {}\n",
+    "bread_type = input(\"어떤 붕어빵을 드릴까요? (팥붕어빵, 슈크림붕어빵, 초코붕어빵): \")\n",
+    "개수 = int(input(\"몇개드릴까요?: \"))\n",
+    "order[bread_type] = 개수\n",
+    "print(f\"주문 내역: {order}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -109,10 +134,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "그런 붕어빵은 없는데요..\n",
+      "주문 내역:  {'10붕어빵': 8}\n",
+      "남은 재고:  {'팥붕어빵': 10, '슈크림붕어빵': 8, '초코붕어빵': 5}\n"
+     ]
+    }
+   ],
+   "source": [
+    "주문내역 = {}\n",
+    "order = input(\"어떤 붕어빵 드릴까요? (뒤에 붕어빵 생략)(팥/슈크림/초코)\")\n",
+    "bread_type = order + \"붕어빵\"\n",
+    "개수 = int(input(\"몇 개 드릴까요?\"))\n",
+    "if bread_type not in 붕어빵:\n",
+    "    print(\"그런 붕어빵은 없는데요..\")\n",
+    "elif 붕어빵[bread_type] < 개수:\n",
+    "    print(\"재고소진이 되어가지고 남은 것중에서 골라주세요\")\n",
+    "else:\n",
+    "    붕어빵[bread_type] -= 개수\n",
+    "\n",
+    "주문내역[bread_type] = 개수\n",
+    "print(\"주문 내역: \", 주문내역)\n",
+    "print(\"남은 재고: \", 붕어빵)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -133,7 +183,32 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "종주문내역 = {}\n",
+    "판매내역 = {\"팥붕어빵\" : 0, \"슈크림붕어빵\" : 0, \"초코붕어빵\" : 0}\n",
+    "while True:\n",
+    "    주문 = input(\"어떤 붕어빵을 드릴까요?(팥붕어빵, 슈크림붕어빵 , 초코붕어빵):\")\n",
+    "    if 주문 == \"종료\":\n",
+    "        break\n",
+    "    if bread_type not in 붕어빵:\n",
+    "        print(\"붕어빵 없습니다..\")\n",
+    "        continue\n",
+    "    개수 = int(input(\"몇개드릴까요?\"))\n",
+    "    if 붕어빵[bread_type] < 개수:\n",
+    "        print(\"재고소진이 되어 남은 것 중에 골라주세요\")\n",
+    "    else:\n",
+    "        붕어빵[bread_type] -= 개수\n",
+    "        if 주문 in 주문내역: \n",
+    "            주문내역[주문] += 개수\n",
+    "            판매내역[주문] += 개수\n",
+    "        else:\n",
+    "            주문내역[주문] = 개수\n",
+    "            판매내역[주문] = 개수\n",
+    "\n",
+    "            print(\"주문내역: \", 주문내역)\n",
+    "            print(\"남은재고: \", 붕어빵)\n",
+    "            \n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -154,7 +229,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "while True:\n",
+    "    bread_type = input(\"추가할 붕어빵 종류를 입력하세요: (잉어빵, 금붕어빵, 숭어빵)\")\n",
+    "    if bread_type == \"종료\":\n",
+    "        break\n",
+    "    추가종류 = int(input(f\"{bread_type}의 추가할 개수를 입력하세요: \"))\n",
+    "    주문[bread_type] += 추가종류\n",
+    "    print(f\"{bread_type}의 재고가 {추가종류}개 추가되었습니다.\")\n",
+    "    print(\"현재 붕어빵 재고:\")\n",
+    "    for bread_type, 추가종류 in bread_type.items():\n",
+    "        print(f\"{bread_type}: {추가종류}개\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -186,7 +272,26 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#초기설정 #딕셔너리관리 #붕어빵판매 (수량 재고 판매수량 현재재고) #\n",
+    "stock = {\"팥붕어빵\": 10, \"슈크림붕어빵\": 8, \"초코붕어빵\": 5}\n",
+    "prices = {\"팥붕어빵\": 1000, \"슈크림붕어빵\": 1200, \"초코붕어빵\": 1500}\n",
+    "sales = {\"팥붕어빵\": 0, \"슈크림붕어빵\": 0, \"초코붕어빵\": 0}\n",
+    "\n",
+    "while True:\n",
+    "    mode = input(\"원하는 모드를 선택하세요 (주문, 관리자, 종료): \")\n",
+    "\n",
+    "    if mode == \"종료\":\n",
+    "        break\n",
+    "    if mode == \"관리자\":\n",
+    "        break\n",
+    "    추가재고 = int(input(f\"{bread_type}의 추가 할 개수를 입력하세요: \"))\n",
+    "    stock[bread_type] += 추가재고\n",
+    "    print(f\"{bread_type}의 재고가{추가재고}개 추가되었습니다.\")\n",
+    "    print(\"현재 붕어빵 재고:\")\n",
+    "    for 붕어빵, 개수 in #이어서 작업하겠습니다 ㅜㅠ\n",
+    "    \n"
+   ]
   }
  ],
  "metadata": {
@@ -208,7 +313,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
