--- a/day4/Chaoter0116_task.ipynb
+++ b/day4/Chaoter0116_task.ipynb
@@ -66,20 +66,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'팥붕어빵': 10, '슈크림붕어빵': 8, '초코붕어빵': 5}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "붕어빵 = {\"팥붕어빵\" : 10, \"슈크림붕어빵\": 8, \"초코붕어빵\": 5}\n",
-    "print(붕어빵)"
+    "stock = {\n",
+    "    \"팥붕어빵\" : 10,\n",
+    "      \"슈크림붕어빵\": 8,\n",
+    "        \"초코붕어빵\": 5}\n"
    ]
   },
   {
@@ -98,22 +92,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "주문 내역: {'10': 5}\n"
+      "주문 내역: {'팥붕어빵': 3}\n"
      ]
     }
    ],
    "source": [
     "order = {}\n",
     "bread_type = input(\"어떤 붕어빵을 드릴까요? (팥붕어빵, 슈크림붕어빵, 초코붕어빵): \")\n",
-    "개수 = int(input(\"몇개드릴까요?: \"))\n",
-    "order[bread_type] = 개수\n",
+    "bread_count = int(input(\"몇개드릴까요?: \"))\n",
+    "order[bread_type] = bread_count\n",
     "print(f\"주문 내역: {order}\")"
    ]
   },
@@ -151,7 +145,7 @@
     "주문내역 = {}\n",
     "order = input(\"어떤 붕어빵 드릴까요? (뒤에 붕어빵 생략)(팥/슈크림/초코)\")\n",
     "bread_type = order + \"붕어빵\"\n",
-    "개수 = int(input(\"몇 개 드릴까요?\"))\n",
+    "bread_count = int(input(\"몇 개 드릴까요?\"))\n",
     "if bread_type not in 붕어빵:\n",
     "    print(\"그런 붕어빵은 없는데요..\")\n",
     "elif 붕어빵[bread_type] < 개수:\n",
