--- a/day4/Chaper1416_task.ipynb
+++ b/day4/Chaper1416_task.ipynb
@@ -41,26 +41,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "id": "juUF2KYbu0DX"
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[2, 4, 6, 8, 10]"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 4, 6, 8, 10]\n"
+     ]
     }
    ],
    "source": [
-    "x=2\n",
-    "n=5\n",
-    "[i * x for i in range(1, n+1)]"
+    "x = 2\n",
+    "n = 5\n",
+    "result = []\n",
+    "for i in range(1, n + 1):\n",
+    "    result.append(i * x)\n",
+    "print(result)"
    ]
   },
   {
@@ -88,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {
     "id": "P0fY7CYUvC_j"
    },
@@ -103,8 +101,9 @@
    ],
    "source": [
     "phone_number = \"01012347890\"\n",
-    "new_number = phone_number[:-4]+ \"****\"\n",
-    "print(new_number)"
+    "anser_number = \"0101234****\"\n",
+    "if phone_number != anser_number:\n",
+    "    print(anser_number)"
    ]
   },
   {
@@ -280,7 +279,7 @@
     }
    ],
    "source": [
-    "x = 17\n",
+    "x = 17    \n",
     "num_list = list(map(int, str(x)))\n",
     "result = x % sum(num_list) == 0\n",
     "print(result)"
@@ -313,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "metadata": {
     "id": "e4LXat3BvRRg"
    },
@@ -322,13 +321,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "김서방은1에 있다.\n"
+      "김서방은1에 있다\n"
      ]
     }
    ],
    "source": [
-    "seoul = [\"Jane\", \"Kim\"]\n",
-    "print (f\"김서방은{seoul.index('Kim')}에 있다.\")"
+    "seoul=[\"Jane\",\"kim\"]  #string seoul.index =x  \n",
+    "x=seoul.index('kim')\n",
+    "print(f'김서방은{x}에 있다')"
    ]
   },
   {
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 7,
    "metadata": {
     "id": "598DAkIHvQav"
    },
@@ -368,12 +368,15 @@
     }
    ],
    "source": [
-    "numbers = [5,8,1,0,6,9]\n",
-    "sum = 0\n",
-    "for i in range(10):\n",
-    "    if i not in numbers:\n",
-    "        sum += i\n",
-    "print(sum)"
+    "numbers = [5,8,1,0,6,9]  #0~9숫자 #missing numbers #+\n",
+    "zero_to_nine = set(range(10))\n",
+    "numbers_set = set(numbers)\n",
+    "missing_number = zero_to_nine - numbers_set\n",
+    "result = sum(missing_number)\n",
+    "  \n",
+    "\n",
+    "print(result)\n",
+    "\n"
    ]
   }
  ],
