--- a/day3/Chaoter0113_task.ipynb
+++ b/day3/Chaoter0113_task.ipynb
@@ -44,6 +44,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1000\n"
+     ]
+    }
+   ],
+   "source": [
+    "balance = 1000\n",
+    "print(balance)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [
@@ -56,8 +74,8 @@
     }
    ],
    "source": [
-    "balance = 1000\n",
-    "print(f'(현재 잔액은 {balance}원 입니다.)')"
+    "balance = 1000 #현재잔액\n",
+    "print(f'(현재 잔액은 {balance}원 입니다.)') #출력하기"
    ]
   },
   {
@@ -80,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -91,16 +109,6 @@
       "[]\n",
       "('입금', 1000, 1000)\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "2000"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -111,7 +119,7 @@
     "type(deposit_amount)\n",
     "balance = (1000)\n",
     "print((\"입금\" ,deposit_amount ,balance,))\n",
-    "balance + deposit_amount "
+    "balance = balance + deposit_amount"
    ]
   },
   {
@@ -157,26 +165,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "요청 금액이 출금요청 금액보다 많습니다. 현재 잔액 -5000원만 출금합니다.\n",
-      "영수증: 출금, withdraw_amount, balance\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "#출금금액을  # 잔액을 갱신 후 새로운 잔액 출력 # 출금 거래를 영수증 리스트에 기록\n",
+    "#출금금액 input()으로 - 현재잔애보다 출금요청이 많은경우 -현재잔액만큼만 출금되게 - 영수증 정보는 튜플형태 - 튜플에 담기는 정보는 (출금,출금금액,현자잔액순)\n",
+    "\n",
+    "withdraw_amount = int(input(\"출금금액\"))  #출금금액\n",
+    "if  withdraw_amount > balance: #현재잔액보다 출금금액이 많을경우\n",
+    "    print (\"요청한 금액이 현재 잔액보다 많습니다. 현재잔액 {balance}원만 출금 합니다.\") \n",
+    "    withdraw_amount = balance   #현재금액과 출금금액이 같다면 출금할 금액에서 현재 잔액만큼 출금\n",
+    "balance -= withdraw_amount    # 현재 잔액만출력하기\n",
+    "receipts.append((\"출금\", withdraw_amount, balance)) #영수증 기록 / 튜플에 담기는 정보\n",
+    "   \n",
+    "print(f'출금완료, 현재잔액은 {balance}원입니다.')\n",
+    "print(\"영수증 : \", receipts[-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "#출금 > #출금 금액 입력 > #잔액 갱신 후 새로운 잔액 > #출금 거래를 영수증 리스트\n",
     "withdraw_amount = int(input(\"출금 금액\")) #출금 금액 입력\n",
     "if withdraw_amount > balance: #출금 요청 금액이 많다.\n",
-    "    print(f\"요청 금액이 출금요청 금액보다 많습니다. 현재 잔액 {balance}원만 출금합니다.\")\n",
     "    balance -= withdraw_amount #새로운 잔액\n",
     "    receipt.append((\"출금, withdraw_amount, balance\")) #영수증 기록\n",
-    "    print(\"영수증:\",receipt[-1])\n"
+    "    print(\"영수증:\",receipt[-1])\n",
+    "    print(f\"요청 금액이 출금요청 금액보다 많습니다. 현재 잔액 {balance}원만 출금합니다.\")\n"
    ]
   },
   {
@@ -195,7 +214,60 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#영수증 요청받았을 떄 출력 #추가된 정보 출력 \n",
+    "receipts = ()\n",
+    "\n",
+    "\n",
+    "print(\"영수증 내역\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#영수증을 요청받는다.\n",
+    "#영수증리스트를 가져온다\n",
+    "#출력한다\n",
+    "receipts=('출금',3000,5000)\n",
+    "while True:\n",
+    "    num=input('영수증을 출력하시겠습니까? 1.예 2.종료') #영수증 요청을 받는다\n",
+    "    if num == '2': #입력한 숫자가 2면 종료한다\n",
+    "        break\n",
+    "    if num == '1': #입력한 숫자가 1이면 \n",
+    "        for i in receipts: #영수증 내역을 출력한다\n",
+    "            print(i,end='')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "balance = 1000#print(1000)\n",
+    "# 초기 잔액과 영수증 리스트 선언\n",
+    "balance = 1000  # 현재 잔액\n",
+    "receipts = []  # 영수증 리스트\n",
+    "# 입금 처리\n",
+    "deposit_amount = int(input())  # 입금 금액 입력\n",
+    "balance += deposit_amount  # 잔액 갱신\n",
+    "# 영수증에 기록\n",
+    "receipts.append((f'입금금액: {deposit_amount}원 입금하셔서 {balance}원 되었습니다'))\n",
+    "#print(receipts)\n",
+    "withdraw_amount = int(input())  # 출금 금액 입력\n",
+    "if withdraw_amount > balance:   # 출금금액이 현재잔액보다 많을경우:\n",
+    "    withdraw_amount = balance  # 잔액만큼 출금  #if 문이라 코드블럭 4칸 띄워주기\n",
+    "balance -= withdraw_amount  # 잔액 갱신 balance = balance - withdraw_amount\n",
+    "# 영수증에 기록\n",
+    "receipts.append(f'출금금액: {withdraw_amount}원 출금하셔서 {balance}원 되었습니다')\n",
+    "# 영수증 내역 출력\n",
+    "print(\"영수증 내역:\")\n",
+    "for record in receipts:     # for문 이용 receipts 값을 순차적으로 record에 넣어줌\n",
+    "    print(record)              "
+   ]
   }
  ],
  "metadata": {
